--- a/projects/playground/src/app/app.component.html
+++ b/projects/playground/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div>
       <app-angular-icon></app-angular-icon>
     </div>
-    <div class="text-lg flex items-center justify-center">
+    <div class="text-lg flex items-center justify-center" id="title">
       Angular component library setup
     </div>
   </div>
